--- a/public/stylesheets/sass/_global-styles.scss
+++ b/public/stylesheets/sass/_global-styles.scss
@@ -116,13 +116,15 @@ li {
     &:before {
         content: '\f058';
         font-family: "Font Awesome 5 Free";
-        font-weight: 900;
         color: #ffd700;
         margin-right: 15px;
     }
 }
 
 .logo {
+    font-size: 32px;
+    font-weight: 700;
+
     &--ra {
         color: #003366;
     }
@@ -269,7 +271,6 @@ li {
         &::before {
           content: '\f068';
           font-family: "Font Awesome 5 Free";
-          font-weight: 900;
           position: absolute;
           right: 16px;
           top: 50%;
